--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,7 @@
 
     <div class="header">
       <div class="title">
-
-        <%= link_to image_tag("title.png"), root_url %>
-
+        <%= link_to image_tag("logo.png"), root_url %>
       </div>
       <div class="nav">
         <% if user_signed_in? %>
