--- a/app/views/responses/new.html.erb
+++ b/app/views/responses/new.html.erb
@@ -1,6 +1,6 @@
 <div class="response-page">
 
-  <div style="text-align: center">
+  <div class="challenge-banner">
     <%= image_tag "your_challenge.png" %>
   </div>
 
