add challenge show page and make it public
anyone can now view any challenge, but they must log in to answer it

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -372,3 +372,22 @@ div.google-checkout-wrapper {
     }
   }
 }
+
+.challenge-teaser-page {
+  h3 {
+    margin-top: 10px;
+    margin-bottom: 30px;
+    line-height: 30px;
+    text-align: center;
+  }
+}
+
+.vowel-purchase-page {
+  h3 {
+    margin-top: 40px;
+  }
+
+  .fb-like {
+    display: inline-block;
+  }
+}
