update the vowel-purchase page to have social media spam buttons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 </head>
 <body>
+  <%= render 'layouts/facebook_sdk' %>
 
   <div class="wrapper">
 
