handle the case when the user runs out of challenges

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -298,7 +298,7 @@ input {
   .options {
     width: 260px;
     height: 110px;
-    font-size: 40px;
+    padding-right: 10px;
 
     img {
       vertical-align: middle;
