--- a/app/views/responses/new.html.erb
+++ b/app/views/responses/new.html.erb
@@ -4,7 +4,15 @@
     <%= image_tag "your_challenge.png" %>
   </div>
 
-  <%= render :partial => "challenges/larger_display", :locals => { :challenge => @challenge } %>
+  <div class="challenge-larger-display">
+    <div class="image-one">
+      <%= image_tag @challenge.image_1.image(:large) %>
+    </div>
+
+    <div class="image-two">
+      <%= image_tag @challenge.image_2.image(:large) %>
+    </div>
+  </div>
 
   <div class="clear">&nbsp;</div>
 
