--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,15 @@
 
   <div class="teaser-challenges">
     <% @teasers.each do |challenge| %>
-      <%= render :partial => "challenges/display", :locals => { :challenge => challenge, :thumb => :home_page, :create_links => user_signed_in? } %>
+      <div class="challenge">
+        <div class="image-one">
+          <%= image_tag challenge.image_1.image(:home_page) %>
+        </div>
+
+        <div class="image-two">
+          <%= image_tag challenge.image_2.image(:home_page) %>
+        </div>
+      </div>
     <% end %>
   </div>
 
