simplify the challenge display css and html

--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -5,7 +5,7 @@
     <%= link_to "log in", root_url(:challenge_id => @challenge.id) %> and answer it!
   </h3>
 
-  <div class="challenge-larger-display">
+  <div class="challenge-display">
     <div class="image-one">
       <%= image_tag @challenge.image_1.image(:large) %>
     </div>
