--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -152,31 +152,14 @@ h3 {
 
 /* END LAYOUT */
 
-.challenge-larger-display {
-  .image-one {
+.challenge-display {
+  img:first_child {
     float: left;
     margin-right: 20px;
   }
 
-  .image-two {
-    float: right;
-  }
-}
-
-.challenge-large-display {
-  .clue {
-    clear: both;
-    padding-top: 30px;
-    margin-bottom: 30px;
-  }
-
-  .image-one {
-    float: left;
-    margin-right: 20px;
-  }
-
-  .image-two {
-    float: right;
+  img:last-child {
+    float: right
   }
 }
 
@@ -224,11 +207,7 @@ h3 {
     margin-right: 0;
   }
 
-  .image-one {
-    float: left;
-  }
-
-  .image-two {
+  img {
     float: left;
   }
 }
@@ -240,24 +219,6 @@ h3 {
   margin-top: 30px;
   margin-bottom: 30px;
   text-align: center;
-}
-
-.challenge-list {
-  padding-left: 340px;
-
-  .challenge {
-    clear: both;
-    padding-bottom: 30px;
-    float: left;
-
-    .image-one {
-      float: left;
-    }
-
-    .image-two {
-      float: left;
-    }
-  }
 }
 
 input {
@@ -288,7 +249,7 @@ input {
     line-height: 26px
   }
 
-  .challenge {
+  .challenge-display {
     border: 2px solid orange;
     width: 450px;
     height: 200px;
