--- a/app/views/responses/new.html.erb
+++ b/app/views/responses/new.html.erb
@@ -4,14 +4,9 @@
     <%= image_tag "your_challenge.png" %>
   </div>
 
-  <div class="challenge-larger-display">
-    <div class="image-one">
-      <%= image_tag @challenge.image_1.image(:large) %>
-    </div>
-
-    <div class="image-two">
-      <%= image_tag @challenge.image_2.image(:large) %>
-    </div>
+  <div class="challenge-display">
+    <%= image_tag @challenge.image_1.image(:large) %>
+    <%= image_tag @challenge.image_2.image(:large) %>
   </div>
 
   <div class="clear">&nbsp;</div>
