add some clearfix css and remove div.clear from the html

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -30,6 +30,28 @@ a {
   }
 }
 
+.clearfix:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+
+.clearfix {
+  display: inline-block;
+}
+
+html[xmlns] .clearfix {
+  display: block;
+}
+
+* html .clearfix {
+  height: 1%;
+}
+
+
 div {
   &.field, &.actions {
     margin-bottom: 10px;
@@ -153,7 +175,8 @@ h3 {
 /* END LAYOUT */
 
 .challenge-display {
-  img:first_child {
+  display: block;
+  img:first-child {
     float: left;
     margin-right: 20px;
   }
