--- a/app/views/responses/show.html.erb
+++ b/app/views/responses/show.html.erb
@@ -18,7 +18,7 @@
       <% end %>
     </div>
 
-  <div style="padding: 40px 0">
+  <div class="clearfix" style="padding: 40px 0">
 
     <div class="options">
       <% if current_user.next_challenge %>
@@ -36,6 +36,4 @@
     </div>
 
   </div>
-
-  <div class="clear">&nbsp;</div>
 </div>
