--- a/app/views/challenge_mailer/challenge.html.erb
+++ b/app/views/challenge_mailer/challenge.html.erb
@@ -7,23 +7,27 @@
 </head>
 
 <body>
-  <p>
-    You have received a challenge from <%= link_to GlobalConfig[:base_url], GlobalConfig[:base_url] %>.
-  </p>
+  <h1>
+    You have received a challenge from <%= link_to "Steganographic!", GlobalConfig[:base_url] %>
+  </h1>
 
-  <p>
-    <%= link_to("Click here to answer it", GlobalConfig[:base_url] + root_path(:challenge_id => @challenge.id, :email => @email)) %>
-  </p>
+  <h2>
+    Can you guess the phrase below for these two images?
+  </h2>
+
+  <h3>
+    If so, <%= link_to("click here to answer it!", GlobalConfig[:base_url] + root_path(:challenge_id => @challenge.id, :email => @email)) %>
+  </h3>
 
 
-  <table>
+  <table style="border: 1px solid gray">
     <tr>
-      <td><%= image_tag GlobalConfig[:base_url] + @challenge.image_1.image(:challenge_email) %></td>
-      <td><%= image_tag GlobalConfig[:base_url] + @challenge.image_2.image(:challenge_email) %></td>
+      <td><%= image_tag GlobalConfig[:base_url] + @challenge.image_1.image(:default) %></td>
+      <td><%= image_tag GlobalConfig[:base_url] + @challenge.image_2.image(:default) %></td>
     </tr>
 
     <tr>
-      <td colspan="2"><%= @challenge.hint_string %></td>
+      <td colspan="2" style="font-size: 22px; line-height: 28px; letter-spacing: 3px; text-align: center;"><%= @challenge.hint_string %></td>
     </tr>
   </table>
 
