update the google checkout code

--- a/app/views/vowel_purchases/new.html.erb
+++ b/app/views/vowel_purchases/new.html.erb
@@ -34,7 +34,7 @@
   <div class="google-checkout-wrapper">
     <form action="https://checkout.google.com/api/checkout/v2/checkoutForm/Merchant/823148050943833" id="BB_BuyButtonForm" method="post" name="BB_BuyButtonForm" target="_top">
       <input name="item_name_1" type="hidden" value="AEIOU Pack"/>
-      <input name="item_description_1" type="hidden" value="Unlock the AEIOU in your Stegano-graphic puzzle! 1.50 from this sale will go to UNICEF, helping them to feed a child for a day."/>
+      <input name="item_description_1" type="hidden" value="You have unlocked the AEIOU in your Stegano-graphic puzzle, brought to you by Impossible Mission Force. And cos we&amp;#39;re such good folks, 1.50 from this sale will go to UNICEF, helping them to feed a child for a day."/>
       <input name="item_quantity_1" type="hidden" value="1"/>
       <input name="item_price_1" type="hidden" value="2.99"/>
       <input name="item_currency_1" type="hidden" value="GBP"/>
