--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -217,13 +217,17 @@ h3 {
 }
 
 .teaser-challenges {
+  height: 250px;
   margin-top: 40px;
   text-align: center;
+  padding-left: 10px;
 
   .challenge {
-    display: inline-block;
+    float: left;
     border: 2px solid orange;
-    margin-right: 27px;
+    margin-right: 20px;
+    width: 310px;
+    text-align: center;
   }
 
   .challenge:last-child {
@@ -231,7 +235,8 @@ h3 {
   }
 
   img {
-    float: left;
+    display: block;
+    margin-bottom: 10px;
   }
 }
 
