randomize puzzle order and let users skip puzzles

--- a/app/views/vowel_purchases/new.html.erb
+++ b/app/views/vowel_purchases/new.html.erb
@@ -46,8 +46,16 @@
     </form>
   </div>
 
+  <h3>
+    Or try another puzzle!
+  </h3>
+
   <p>
-    <%= link_to "...back to the challenge", new_challenge_response_path(@resp.challenge) %>
+    Just click the "Steganographic" logo (on the top right of the page) to view another random puzzle!
+  </p>
+
+  <p style="margin-top: 40px;">
+    <%= link_to "...back to the puzzle", new_challenge_response_path(@resp.challenge) %>
   </p>
 
 </div>
