correct a text mistake on the stumpt page

--- a/app/views/vowel_purchases/new.html.erb
+++ b/app/views/vowel_purchases/new.html.erb
@@ -51,7 +51,7 @@
   </h3>
 
   <p>
-    Just click the "Steganographic" logo (on the top right of the page) to view another random puzzle!
+    Just click the "Steganographic" logo (on the top left of the page) to view another random puzzle!
   </p>
 
   <p style="margin-top: 40px;">
